--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.19.6",
+    "@emailjs/browser": "^4.3.3",
     "@tanstack/react-query": "^5.32.1",
     "contentful": "^10.9.1",
     "next": "14.1.4",
